added option to add user rating
